# OJT-WizardLab

./: README.md  aaa.c
week1/01_read_binaryfile/: main  main.c
week1/02_read_binary_w_par/: main  main.c  tags
week1/03_library/01_static_library/: Readme.txt  hexView.h  main
week1/03_library/02_shared_library/: Readme.txt  libhexview.so.1.0.1  main  main.c  tags
week1/03_library/03_dynamic_library/: hexView.c
week1/04_debug_mesg/: hexView.c  hexView.h  log_util.c  log_util.h  main  main.c  partition.mbn  tags
week2/01_crc16_IBM_tbl/: main3.c  make_crc16_IBM_tbl  make_crc16_IBM_tbl.c
week2/02_HDLC_encoding/: main  main.c  tags
week3/01_Makefile/: .Makefile.swp  Makefile  Makefile.bak  calendar.c  diary_exe  log  main.c  memo.c  tags
week3/01_Makefile/debug/: dairy_20170321
week3/02_Makefile_final/: Config.mk  Makefile  Rules.mk  diary
week3/02_Makefile_final/calendar/: calendar.c
week3/02_Makefile_final/main/: Makefile
week3/02_Makefile_final/memo/: Makefile  memo.c
week3/03_autoconf/: Makefile  Makefile.in  config.status  configure  configure.ac  configure.scan  like  like.c
week3/03_autoconf/autom4te.cache/: output.0  requests  traces.0
week3/04_autotools_tutorial/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan
week3/04_autotools_tutorial/autom4te.cache/: output.0  requests  traces.0  traces.1
week3/04_autotools_tutorial/src/: Makefile  Makefile.in  hello  hello.c
week5/01_HDLC_socket_program/: file_client  file_client.c  file_server  file_server.c  hdlc.c  hdlc.h
(+10 files in other folders)
